src/classifieds/parse/snapshots/segelflug_classifieds__classifieds__parse__user__tests__parse_test.snap
---
source: src/classifieds/parse/user.rs
expression: user
input_file: src/classifieds/parse/test-input/user/basic.html
snapshot_kind: text
---
ClassifiedsUser {
    name: Some(
        "Raatz",
    ),
    address: None,
    location: Some(
        "Germany",
    ),
    website: None,
}
