src/classifieds/parse/snapshots/segelflug_classifieds__classifieds__parse__user__tests__parse_test@basic.html.snap
---
source: src/classifieds/parse/user.rs
expression: user
input_file: src/classifieds/parse/test-input/user/basic.html
---
ClassifiedsUser {
    name: Some(
        "Raatz",
    ),
    address: None,
    location: Some(
        "Germany",
    ),
    website: None,
}
