src/classifieds/parse/snapshots/segelflug_classifieds__classifieds__parse__user__tests__parse_test@dj-classifieds-2.html.snap
---
source: src/classifieds/parse/user.rs
expression: user
input_file: src/classifieds/parse/test-input/user/dj-classifieds-2.html
---
ClassifiedsUser {
    name: Some(
        "Senner, Dominik",
    ),
    address: None,
    location: None,
    website: None,
}
