src/classifieds/parse/snapshots/segelflug_classifieds__classifieds__parse__user__tests__parse_test@dj-classifieds.html.snap
---
source: src/classifieds/parse/user.rs
expression: user
input_file: src/classifieds/parse/test-input/user/dj-classifieds.html
---
ClassifiedsUser {
    name: Some(
        "Bieniek, Tobias",
    ),
    address: None,
    location: Some(
        "Aachen-Merzbrück, Deutschland",
    ),
    website: None,
}
